--- a/FSKs/finance-app/client/src/index.css
+++ b/FSKs/finance-app/client/src/index.css
@@ -10,6 +10,9 @@ body,
   background-color: #1f2026;
 }
 
+.MuiDataGrid-container--top [role="row"] {
+  background-color: red !important;
+}
 ::-webkit-scrollbar {
   width: 10px;
 }
